Resolves #2019 OffCancas compare: hide horizontal scrollbar

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
@@ -138,7 +138,6 @@
 }
 
 .offcanvas-cart-footer {
-    overflow-x: hidden;
 }
 
 .offcanvas-cart-footer-row {
